WIP smallpart layouts: - Fix filters box styling and alignments - Fix edit comment area styling and alignments

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -799,6 +799,7 @@ input.radioBox_colored {
     border-radius: 5px;
 	padding: 5px;
 	textarea {resize: vertical;}
+	order: 1;
 }
 
 .et2_hbox.et2_box_widget.commentRadioBoxArea {
@@ -1171,8 +1172,6 @@ span[id$="_backgroundColorTransparency"][disabled = "disabled"] {opacity: 0.5}
 }
 .smallpart_filter_group {
 	width: ~"calc(30% - 10px)";
-	padding-bottom: 6px;
-	padding-top: 6px;
 }
 .smallpart_filter_participants {
 	float: right;
